noinst_LIBRARIES = libSolver.a
libSolver_a_SOURCES = Krylov/krylov.h                         \
                      Krylov/krylov.cpp                       \
                      Krylov/bicgs.h                          \
                      Krylov/bicgs.cpp                        \
                      Krylov/cg.h                             \
                      Krylov/cg.cpp                           \
                      Krylov/cgs.h                            \
                      Krylov/cgs.cpp                          \
                      Preconditioner/preconditioner.h         \
                      Preconditioner/preconditioner_form.cpp  \
                      Preconditioner/preconditioner_solve.cpp \
                      Gauss/gauss.h                           \
                      Gauss/gauss.cpp                         \
                      Additive/additive.h                     \
                      Additive/additive_ravioli.h             \
                      Additive/additive.cpp                   \
                      Additive/additive_coarsen_system.cpp    \
                      Additive/additive_cycle.cpp             \
                      Additive/additive_cycle_functions.cpp   \
                      Additive/additive_interpolation.cpp     \
                      Additive/additive_recursive.cpp         \
                      Additive/additive_residual.cpp          \
                      Additive/additive_restriction.cpp

INCLUDE = -I@top_srcdir@/
