noinst_LIBRARIES = libPIDcontrol.a
libPIDcontrol_a_SOURCES = pidcontrol.h      \
                          pidcontrol.cpp    \
                          pidcontrol_calculate.cpp \
                          pidcontrol_load.cpp \
                          pidcontrol_rm.cpp  \
                          pidcontrol_save.cpp


INCLUDE = -I@top_srcdir@/

