noinst_LIBRARIES = libAxisymmetric.a
libAxisymmetric_a_SOURCES = axisymmetric.h                     \
                            axisymmetric_check_radial_grid.cpp \
                            axisymmetric_statistics.cpp        \
                            axisymmetric_surfaces_volumes.cpp

INCLUDE = -I@top_srcdir@/
