noinst_LIBRARIES = libCentered.a
libCentered_a_SOURCES = centered.h                    \
                        centered.cpp                  \
                        centered_advance.cpp          \
                        centered_coarsen.cpp          \
                        centered_convection.cpp       \
                        centered_diffusion.cpp        \
                        centered_load.cpp             \
                        centered_new_time_step.cpp    \
                        centered_save.cpp             \
                        centered_solve.cpp            \
                        centered_system_bnd.cpp       \
                        centered_system_diffusive.cpp \
                        centered_system_innertial.cpp \
                        centered_update_rhs.cpp

INCLUDE = -I@top_srcdir@/
