noinst_LIBRARIES = libCommonHeatTransfer.a
libCommonHeatTransfer_a_SOURCES = commonheattransfer.h                   \
                                  commonheattransfer_inline.h            \
                                  commonheattransfer.cpp                 \
				  commonheattransfer_distance.cpp        \
				  commonheattransfer_ghost_distance.cpp  \
				  commonheattransfer_gradt_ib.cpp        \
				  commonheattransfer_hflux_wall.cpp      \
				  commonheattransfer_hflux_wall_ib.cpp   \
				  commonheattransfer_lambda.cpp

INCLUDE = -I@top_srcdir@/
