noinst_LIBRARIES = libCommonHeatTransfer.a
libCommonHeatTransfer_a_SOURCES = commonheattransfer.h                     \
                                  commonheattransfer_inline.h              \
                                  commonheattransfer.cpp                   \
                                  commonheattransfer_add_point.cpp         \
                                  commonheattransfer_area_vapor.cpp        \
                                  commonheattransfer_construct_stencil.cpp \
                                  commonheattransfer_derivative.cpp        \
                                  commonheattransfer_distance.cpp          \
                                  commonheattransfer_edge.cpp              \
                                  commonheattransfer_hflux_wall.cpp        \
                                  commonheattransfer_hflux_wall_ib.cpp     \
                                  commonheattransfer_lambda.cpp            \
                                  commonheattransfer_node_temperature.cpp  \
                                  commonheattransfer_restint.cpp

INCLUDE = -I@top_srcdir@/
