noinst_LIBRARIES = libDispersed.a
libDispersed_a_SOURCES = particle.h                        \
                         dispersed.h                       \
                         particle.cpp                      \
                         dispersed.cpp                     \
                         dispersed_advance.cpp             \
                         dispersed_cell_init.cpp           \
                         dispersed_cell_link.cpp           \
                         dispersed_check_add_particles.cpp \
                         dispersed_count_particles.cpp     \
                         dispersed_collisions.cpp          \
                         dispersed_box_correct.cpp         \
                         dispersed_box_init.cpp            \
                         dispersed_box_velocity.cpp        \
                         dispersed_couple_interface.cpp    \
                         dispersed_forces.cpp              \
                         dispersed_volume_averaged.cpp     \
                         dispersed_modeled.cpp             \
                         dispersed_avg.cpp                 \
                         dispersed_merge.cpp               \
                         dispersed_rebounce.cpp            \
                         dispersed_repaint.cpp             \
                         dispersed_interface_fraction.cpp  \
                         dispersed_save_load.cpp         

INCLUDE = -I@top_srcdir@/
