noinst_LIBRARIES = libFloodfill.a
libFloodfill_a_SOURCES = region.h                               \
                         region.cpp                             \
                         floodfill.h                            \
                         floodfill.cpp                          \
                         floodfill_compare_rgn.cpp              \
                         floodfill_get_region_info.cpp          \
                         floodfill_out_region_info.cpp          \
                         floodfill_save_load.cpp                \
                         floodfill_face_scan_rgn.cpp            \
                         floodfill_identify_regions.cpp         \
                         floodfill_scanline.cpp                 \
                         index_ijk.h

INCLUDE = -I@top_srcdir@/
