noinst_LIBRARIES = libHeaviside.a
libHeaviside_a_SOURCES = heaviside.h                     \
                         heaviside_calculate.cpp         \
                         marching_cube.h                 \
                         marching_cube.cpp               \
                         marching_cube_aux.cpp           \
                         marching_cube_area.cpp          \
                         marching_cube_faceval.cpp       \
                         marching_cube_polygonise.cpp    \
                         marching_cube_surface.cpp       \
                         marching_cube_surfval.cpp       \
                         marching_cube_triangle_area.cpp \
                         marching_cube_volume.cpp  

INCLUDE = -I@top_srcdir@/
