noinst_LIBRARIES = libHeaviside.a
libHeaviside_a_SOURCES = heaviside.h                     \
                         heaviside_geometry.h            \
                         heaviside_calculate.cpp         \
                         heaviside_fs_bnd_1D.cpp         \
                         heaviside_fs_bnd_geometric.cpp  \
                         heaviside_fs_bnd_nosubgrid.cpp  \
                         heaviside_fs_geom.cpp           \
                         heaviside_fs_interp.cpp         \
                         heaviside_geometry.cpp          \
                         heaviside_standing_square.cpp

INCLUDE = -I@top_srcdir@/
