noinst_LIBRARIES = libIntegralPC.a
libIntegralPC_a_SOURCES = integralpc.h                           \
                          integralpc_cavity_evaluation.cpp       \
                          integralpc_evaluate_point.cpp          \
                          integralpc_momentum_evaluation.cpp     \
                          integralpc_phase_change_evaluation.cpp \
                          integralpc_regula_falsi.cpp            \
                          integralpc_solve.cpp

INCLUDE = -I@top_srcdir@/
