noinst_LIBRARIES = libLagrangian.a
libLagrangian_a_SOURCES = particle.h                        \
                         lagrangian.h                       \
                         particle.cpp                      \
                         lagrangian.cpp                     \
                         lagrangian_advance.cpp             \
                         lagrangian_cell_init.cpp           \
                         lagrangian_cell_link.cpp           \
                         lagrangian_check_add_particles.cpp \
                         lagrangian_count_particles.cpp     \
                         lagrangian_collisions.cpp          \
                         lagrangian_box_correct.cpp         \
                         lagrangian_box_init.cpp            \
                         lagrangian_box_velocity.cpp        \
                         lagrangian_couple_interface.cpp    \
                         lagrangian_forces.cpp              \
                         lagrangian_volume_averaged.cpp     \
                         lagrangian_modeled.cpp             \
                         lagrangian_avg.cpp                 \
                         lagrangian_merge.cpp               \
                         lagrangian_rebounce.cpp            \
                         lagrangian_repaint.cpp             \
                         lagrangian_interface_fraction.cpp  \
                         lagrangian_save_load.cpp         

INCLUDE = -I@top_srcdir@/
