noinst_LIBRARIES = libNucleation.a
libNucleation_a_SOURCES = site.h                           \
                          site.cpp                         \
                          nucleation.h                     \
                          nucleation.cpp                   \
                          nucleation_add.cpp               \
                          nucleation_area_vapor.cpp        \
                          nucleation_area_vapor_sum.cpp    \
                          nucleation_clr_site.cpp          \
                          nucleation_cutneck.cpp           \
                          nucleation_distance_from_site.cpp\
                          nucleation_in_vapor.cpp          \
                          nucleation_load.cpp              \
                          nucleation_plant.cpp             \
                          nucleation_plant_site.cpp        \
                          nucleation_replant.cpp           \
                          nucleation_rm.cpp                \
                          nucleation_save.cpp              \
                          nucleation_set_range.cpp         \
                          nucleation_st_active.cpp         \
                          nucleation_stratified_sphere.cpp \
                          nucleation_tpr_site.cpp          \
                          nucleation_zoning.cpp          
INCLUDE = -I@top_srcdir@/
