noinst_LIBRARIES = libPathline.a
libPathline_a_SOURCES = pathline.h                         \
                        particle.h                         \
                        pathline.cpp                       \
                        pathline_add_global.cpp            \
                        pathline_add_local.cpp             \
                        pathline_advance.cpp               \
                        pathline_exchange.cpp              \
                        pathline_init.cpp                  \
                        pathline_load.cpp                  \
                        pathline_rm.cpp                    \
                        pathline_save.cpp                  \
                        particle.cpp

INCLUDE = -I@top_srcdir@/
