noinst_LIBRARIES = libTif.a
libTif_a_SOURCES = tif.h                   \
                  tif.cpp                  \
                  tif_interface.cpp        \
                  tif_mass_src_effect.cpp  \
                  tif_pressure_effect.cpp  \
                  tif_tint_field.cpp       \
                  tif_tint_val.cpp         \
                  tif_vicinity.cpp

INCLUDE = -I@top_srcdir@/
