noinst_LIBRARIES = libTif.a
libTif_a_SOURCES = tif.h                    \
                   tif.cpp                  \
                   tif_extend_tint.cpp      \
                   tif_interface.cpp        \
                   tif_set_limiting.cpp     \
                   tif_tint_field.cpp       \
                   tif_tint_val.cpp

INCLUDE = -I@top_srcdir@/
