noinst_LIBRARIES = libTopology.a
libTopology_a_SOURCES = topology.h                 \
                        topology.cpp               \
                        topology_distance.cpp      \
                        topology_extrapolate.cpp   \
                        topology_interface.cpp     \
                        topology_new_time_step.cpp

INCLUDE = -I@top_srcdir@/
