noinst_LIBRARIES = libTopology.a
libTopology_a_SOURCES = topology.h                    \
                        topology.cpp                  \
			topology_first_difference.cpp \
                        topology_distance.cpp         \
                        topology_distance_old.cpp     \
                        topology_extrapolate.cpp      \
                        topology_front_minmax.cpp     \
                        topology_interface.cpp        \
                        topology_new_time_step.cpp    \
			topology_second_difference.cpp\
			topology_test_differences.cpp

INCLUDE = -I@top_srcdir@/
