noinst_LIBRARIES  = libScalar.a
libScalar_a_SOURCES = scalar.h                     \
                      scalar_aliases.h             \
                      scalar_bnd_extract.cpp       \
                      scalar_bnd_grad_update.cpp   \
                      scalar_bnd_insert.cpp        \
                      scalar_bnd_update.cpp        \
                      scalar_browsing.h            \
                      scalar_change_grid.cpp       \
                      scalar.cpp                   \
                      scalar_average.cpp           \
                      scalar_exchange.cpp          \
                      scalar_exchange_avg.cpp      \
                      scalar_exchange_all.cpp      \
                      scalar_exchange_all_avg.cpp  \
                      scalar_exchange_flag.cpp     \
                      scalar_grad.cpp              \
                      scalar_ijk.cpp               \
                      scalar_load.cpp              \
                      scalar_minmax.cpp            \
                      scalar_one2all.cpp           \
                      scalar_rm.cpp                \
                      scalar_operators.cpp         \
                      scalar_save.cpp              \
                      scalar_save_range.cpp

INCLUDE = -I@top_srcdir@/
