noinst_LIBRARIES  = libScalarBool.a
libScalarBool_a_SOURCES = scalarbool.h             \
                      scalarbool.cpp               \
                      scalarbool_exchange.cpp      \
                      scalarbool_exchange_all.cpp  \
                      scalarbool_ijk.cpp           \
                      scalarbool_load.cpp          \
                      scalarbool_rm.cpp            \
                      scalarbool_save.cpp

INCLUDE = -I@top_srcdir@/
