noinst_LIBRARIES  = libScalarInt.a
libScalarInt_a_SOURCES = scalarint.h                 \
                         scalarint.cpp               \
                         scalarint_bnd_extract.cpp   \
                         scalarint_bnd_insert.cpp    \
                         scalarint_bnd_update.cpp    \
                         scalarint_exchange.cpp      \
                         scalarint_exchange_all.cpp  \
                         scalarint_exchange_flag.cpp \
                         scalarint_ijk.cpp           \
                         scalarint_load.cpp          \
                         scalarint_minmax.cpp        \
                         scalarint_one2all.cpp       \
                         scalarint_rm.cpp            \
                         scalarint_save.cpp

INCLUDE = -I@top_srcdir@/
