noinst_LIBRARIES   = libVector.a
libVector_a_SOURCES = vector_browsing.h             \
                      vector.h                      \
                      vector.cpp                    \
                      vector_bnd_extract.cpp        \
                      vector_bnd_extract_global.cpp \
                      vector_bnd_extract_pos.cpp    \
                      vector_bnd_flow.cpp           \
                      vector_bnd_insert.cpp         \
                      vector_bnd_update.cpp         \
                      vector_central.cpp            \
                      vector_change_grid.cpp        \
                      vector_copy.cpp               \
                      vector_exchange.cpp           \
                      vector_exchange_all.cpp       \
                      vector_grad.cpp               \
                      vector_ijk.cpp                \
                      vector_load.cpp               \
                      vector_outflow.cpp            \
                      vector_randomize.cpp          \
                      vector_rm.cpp                 \
                      vector_save.cpp               \
                      vector_save_range.cpp         \
                      vector_shear.cpp              \
                      vector_shear_magn.cpp

INCLUDE = -I@top_srcdir@/
